first settings of a database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
             android:parentActivityName=".Tickets"/>
         <activity android:name=".PaidTickets"
             android:parentActivityName=".Tickets"/>
+        <activity android:name=".DraftList"
+          android:parentActivityName=".FreeTickets"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
