--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,9 @@ android {
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
-           // vectorDrawables.useSupportLibrary = true
+
+                defaultConfig {
+                    vectorDrawables.useSupportLibrary = true}
 
             }
         }
@@ -40,9 +42,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.4.0'
     implementation 'com.facebook.fresco:fresco:1.10.0'
+    implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
+
     // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
