--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+      android:name="io.ingodo.ikirori.IkiroriApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -24,10 +25,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TitleAndDescription"
+        <activity
+            android:name=".TitleAndDescription"
+            android:launchMode="singleTop"
             android:parentActivityName=".HomeActivity"/>
-        <activity android:name=".StartAndEndDate"
+        <activity
+            android:name=".StartAndEndDate"
+            android:launchMode="singleTop"
             android:parentActivityName=".TitleAndDescription"/>
+        <activity
+            android:name=".Category"
+            android:launchMode="singleTop"
+            android:parentActivityName=".Location"/>
         <activity android:name=".Location"
             android:parentActivityName=".StartAndEndDate"/>
         <activity android:name=".Tickets"
@@ -38,6 +47,10 @@
             android:parentActivityName=".Tickets"/>
         <activity android:name=".DraftList"
           android:parentActivityName=".FreeTickets"/>
+        <activity
+          android:name=".EditEvent"
+          android:parentActivityName=".HomeActivity"
+          />
 
         <provider
             android:name="androidx.core.content.FileProvider"
