--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
       android:name="io.ingodo.ikirori.IkiroriApplication"
         android:allowBackup="true"
@@ -17,6 +18,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".HomeActivity"
+            android:launchMode="singleTask"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
